Actions
Bug #12001
closedcpu_uarray_free(NULL) panics
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
We hit this path if zone_create() fails early, and we call zone_free().
Updated by John Levon over 2 years ago
- Subject changed from cpu_uarray_free(NULL) panics. to cpu_uarray_free(NULL) panics
To fix we'll allow NULL as an arg to cpu_uarray_free()
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit f557613a52efd99cf11a085bca7a35c5e93315f1
commit f557613a52efd99cf11a085bca7a35c5e93315f1 Author: John Levon <john.levon@joyent.com> Date: 2019-11-20T10:30:00.000Z 12001 cpu_uarray_free(NULL) panics Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Jason King <jason.brian.king@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions